packages/isar_generator/test/errors/class/enum.dart
// only classes

import 'package:isar/isar.dart';

@collection
enum Test { a, b, c }
